plugins {
    id 'com.android.application'
}

android {
    compileSdk 33

    defaultConfig {
        applicationId "cc.calliope.mini_v2"
        minSdk 21
        targetSdk 33
        versionCode 1
        versionName "2.0.BETA"
        multiDexEnabled true

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_16
        targetCompatibility JavaVersion.VERSION_16
    }
    buildFeatures {
        viewBinding true
    }
    namespace 'cc.calliope.mini_v2'
}

dependencies {
    implementation 'javax.validation:validation-api:2.0.1.Final'

    implementation 'androidx.appcompat:appcompat:1.5.1'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    implementation 'androidx.navigation:navigation-fragment:2.5.2'
    implementation 'androidx.navigation:navigation-ui:2.5.2'
    implementation "androidx.viewpager2:viewpager2:1.0.0"

    // Brings the new BluetoothLeScanner API to older platforms
    implementation 'no.nordicsemi.android.support.v18:scanner:1.6.0'
    // BLE library
    implementation 'no.nordicsemi.android:ble:2.5.1'
    // Log Bluetooth LE events in nRF Logger
    implementation 'no.nordicsemi.android:log:2.3.0'

//    implementation 'no.nordicsemi.android:dfu:2.1.0'
    implementation project(':dfu-lib')
    implementation project(':partial-flashing-lib')

    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}